# Q2RTX

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: build.yml
3zb2/models/: zflag.md2  zflag.pcx
3zb2/pics/: i_zig.pcx  spectag.pcx  zigtag.pcx
baseq2/: q2rtx.menu
baseq2/materials/: baseq2.mat
baseq2/models/shells/: m_shell.md3  m_shell.tga  s_shell.md3  s_shell.tga  s_shell_n.tga
baseq2/models/weapons/: readme.txt
baseq2/overrides/: +0btshoot1.tga  +0btshoot1_light.tga  +0btshoot1_n.tga  +0btshoot2.tga  +0btshoot2_light.tga  +0btshoot2_n.tga  +0butn1.tga  +0butn1_light.tga  +0butn1_n.tga  +0butn4.tga  +0butn4_light.tga  +0butn4_n.tga  +0butn8.tga  +0butn8_light.tga  +0butn8_n.tga  +0cgrate1_1_light.tga  +0cgrate2_1_light.tga  +0cgrate3_1_light.tga  +0cgrate3_1_n.tga  +0comp10_1_light.tga  +0comp11_1.tga  +0comp11_1_light.tga  +0comp11_1_n.tga  +0lcompa_light.tga  +10lcomp.tga  +10lcomp_light.tga  +11lcomp_light.tga  +12lcomp_light.tga  +13lcomp_light.tga  +14lcomp_light.tga  +15lcomp_light.tga  +16lcomp_light.tga  +16lcomp_n.tga  +17lcomp_light.tga  +18lcomp_light.tga  +19lcomp_light.tga  +1cgrate1_1_light.tga  +1cgrate2_1.tga  +1comp10_1_light.tga  +1comp10_1_n.tga  (+2456 more)
baseq2/sprites/: rocket_0.sp2  rocket_0_0000.tga  rocket_0_0004.tga  rocket_0_0008.tga  rocket_0_0012.tga  rocket_0_0016.tga  rocket_0_0020.tga  rocket_0_0024.tga  rocket_0_0028.tga  rocket_0_0032.tga  rocket_0_0036.tga  rocket_0_0040.tga  rocket_0_0044.tga  rocket_0_0048.tga  rocket_0_0052.tga  rocket_0_0056.tga  rocket_0_0060.tga  rocket_0_0064.tga  rocket_0_0068.tga  rocket_0_0072.tga  rocket_0_0076.tga  rocket_0_0080.tga  rocket_0_0084.tga  rocket_0_0088.tga  rocket_0_0092.tga  rocket_0_0096.tga  rocket_0_0100.tga  rocket_0_0104.tga  rocket_0_0108.tga  rocket_0_0112.tga  rocket_0_0116.tga  rocket_0_0120.tga  rocket_0_0124.tga  rocket_0_0128.tga  rocket_0_0132.tga  rocket_0_0136.tga  rocket_0_0140.tga  rocket_0_0144.tga  rocket_0_0148.tga  rocket_0_0152.tga  (+201 more)
baseq2/textures/: region.tga  region_n.tga
baseq2/textures/e1u1/: color1_2.tga  color1_2_n.tga  color1_4.tga  color1_4_n.tga  color1_5.tga  color1_5_n.tga  color1_7.tga  color1_7_n.tga  color1_8.tga  comp2_1.tga  comp2_1_light.tga  comp2_1_n.tga  comp2_3.tga  comp2_3_n.tga  floor1_3.tga  floor1_3_n.tga  floor3_2.tga  floor3_2_n.tga  floor3_3.tga  floor3_3_n.tga  grate1_1.tga  grate1_1_n.tga  grate1_3.tga  grate1_3_n.tga  grate1_4.tga  grate1_4_n.tga  grate1_5.tga  grate1_5_n.tga  grate1_6.tga  grate1_6_n.tga  metal14_1.tga  metal14_1_n.tga  metal1_1.tga  metal1_1_n.tga  metal1_2.tga  metal1_2_n.tga  metal1_7.tga  metal1_7_n.tga  metal2_1.tga  metal2_1_n.tga  (+28 more)
baseq2/textures/e1u2/: comp2_1.tga  comp2_1_n.tga  comp2_3.tga  comp2_3_n.tga  grate1_1.tga  grate1_1_n.tga  grate1_3.tga  grate1_3_n.tga  grate1_4.tga  grate1_4_n.tga  grate1_5.tga  grate1_5_light.tga  grate1_5_n.tga  grate1_6.tga  grate1_6_n.tga  grate1_8.tga  grate1_8_n.tga  metal13_1.tga  metal13_1_n.tga  metal14_1.tga  metal14_1_n.tga  metal1_1.tga  metal1_1_n.tga  metal1_2.tga  metal1_2_n.tga  metal1_6.tga  metal1_6_n.tga  metal1_7.tga  metal1_7_n.tga  metal2_3.tga  metal2_3_n.tga  metal3_1.tga  metal3_2.tga  metal3_2_n.tga  metal3_4.tga  metal3_4_n.tga  metal4_1.tga  metal4_1_n.tga  metal4_2.tga  metal4_2_n.tga  (+14 more)
baseq2/textures/e1u3/: comp2_1.tga  con1_1.tga  con1_1_n.tga  grate1_4.tga  grate1_4_n.tga  grate1_5.tga  grate1_5_n.tga  grate1_8.tga  grate1_8_n.tga  metal3_1.tga  metal3_1_n.tga  metal3_2.tga  metal3_2_n.tga  metal3_3_n.tga  metal4_2.tga  metal4_2_n.tga  support1_1_n.tga  troof1_1.tga  troof1_1_n.tga
baseq2/textures/e2u1/: metal17_2.tga  metal17_2_n.tga  metal18_1.tga  metal18_1_n.tga  metal3_1.tga  metal3_1_n.tga  metal3_2.tga  metal3_2_n.tga  metal3_3.tga  metal3_3_n.tga  metal4_2.tga  metal4_2_n.tga  metal6_1.tga  metal6_1_n.tga  support1_1.tga  support1_1_n.tga
baseq2/textures/e2u2/: comp2_1_n.tga  floor1_2.tga  floor1_2_n.tga  floor1_3.tga  floor1_3_n.tga  floor1_4.tga  floor1_4_n.tga  floor1_5.tga  floor1_5_n.tga  floor1_7.tga  floor1_7_n.tga  floor1_8.tga  floor1_8_n.tga  floor2_4.tga  floor2_4_n.tga  floor2_5.tga  floor2_5_n.tga  floor2_6.tga  floor2_6_n.tga  floor2_7.tga  floor2_7_n.tga  floor2_8.tga  floor2_8_n.tga  metal16_1.tga  metal16_1_n.tga  metal18_1.tga  metal18_1_n.tga  metal18_2.tga  metal18_2_n.tga  metal19_1.tga  metal19_1_n.tga  metal22_2.tga  metal22_2_n.tga  pipe1_4.tga  pipe1_4_n.tga  sign1_1.tga  sign1_1_n.tga
baseq2/textures/e2u3/: con1_1_n.tga  floor1_2.tga  floor1_2_n.tga  floor1_3.tga  floor1_3_n.tga  floor1_4.tga  floor1_4_n.tga  floor1_5.tga  floor1_5_n.tga  floor1_7.tga  floor1_7_n.tga  floor1_8.tga  floor1_8_n.tga  floor2_4.tga  floor2_4_n.tga  floor2_5.tga  floor2_5_n.tga  floor2_6.tga  floor2_6_n.tga  floor2_7.tga  floor2_7_n.tga  floor2_8.tga  floor2_8_n.tga  floor3_2.tga  floor3_2_n.tga  floor3_3.tga  floor3_3_n.tga  grate1_1.tga  grate1_1_n.tga  grate1_4.tga  grate1_4_n.tga  metal14_1.tga  metal14_1_n.tga  metal17_1.tga  metal18_2.tga  metal1_1.tga  metal1_1_n.tga  metal1_2_n.tga  metal2_2.tga  metal3_1.tga  (+16 more)
baseq2/textures/e3u1/: floor2_5.tga  floor2_5_n.tga  floor2_6.tga  floor2_6_n.tga  floor2_7.tga  floor2_7_n.tga  floor2_8.tga  floor2_8_n.tga  grate1_6.tga  grate1_6_n.tga  metal1_2.tga  metal2_1.tga  metal2_1_n.tga  metal2_2.tga  metal2_2_n.tga  metal3_3.tga  metal4_1.tga  metal4_1_n.tga  metal4_2.tga  metal4_2_n.tga  metal6_1.tga  metal6_1_n.tga  red1_3.tga  red1_3_n.tga  support1_1.tga
baseq2/textures/e3u2/: troof1_1.tga  troof1_1_n.tga
baseq2/textures/e3u3/: color1_2.tga  color1_2_n.tga  color1_4.tga  (+61 more)
rogue/: q2rtx.menu
rogue/models/: metall.tga
rogue/pics/: loading.tga
rogue/textures/: hint.tga
src/: CMakeLists.txt
src/3zb2/: CMakeLists.txt  g_items.c
src/3zb2/bot/: za.c
src/common/: bsp.c
src/ctf/: CMakeLists.txt
src/game/: g_misc.c
src/refresh/: images.c
src/rogue/: CMakeLists.txt  g_items.c  g_main.c  g_weapon.c
src/server/: save.c
src/xatrix/: CMakeLists.txt  g_items.c  g_main.c  g_weapon.c
src/zaero/: CMakeLists.txt
xatrix/: q2rtx.menu
zaero/: game.cfg  q2rtx.menu
(+2080 files in other folders)
